added homepage and removed author name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,8 +3,7 @@ description: "A Flutter plugin to inspect HTTP(S) API requests directly in Chrom
   This plugin is Android-only and built on top of Facebook's Stetho SDK and inspired by the now-discontinued
   flutter_stetho package."
 version: 1.0.0
-author: Rahul Kumar <rathorerahul586@gmail.com>
-homepage:
+homepage: https://github.com/rathorerahul586/flutter_stetho_interceptor
 
 environment:
   sdk: ">=3.7.0 <4.0.0"
