added flutter supoort version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ homepage: https://github.com/rathorerahul586/flutter_stetho_interceptor
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
+  flutter: ">=3.7.0"
 
 dependencies:
   flutter:
